tests/script_errors/imut_bad_drop/error.txt
Error: 
    1 | match "dont-care" of
    2 |   case "dont-care" when drop
      |                         ^^^^ Found the token `drop` but expected one of `!`, `\``, `$`, `(`, `+`, `-`, `<<`, `<ident>`, `[`, `absent`, `args`, `bool`, `event`, `float`, `for`, `group`, `heredoc_start`, `int`, `match`, `merge`, `nil`, `not`, `patch`, `present`, `recur`, `state`, `window`, `{`
      |                              NOTE: It looks like you tried to use the 'drop' as a ident, consider quoting it as `drop` to make it an identifier.
    3 |   default => "ouch"
    4 | end
